WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84022
[CG] ImageBuffer: check getPremultipliedImageData() error return
https://bugs.webkit.org/show_bug.cgi?id=84022
Summary
[CG] ImageBuffer: check getPremultipliedImageData() error return
noel gordon
Reported
2012-04-16 05:05:02 PDT
[CG] ImageBufffer: check getPremultipliedImageData() error return
Attachments
Patch
(2.98 KB, patch)
2012-04-16 05:06 PDT
,
noel gordon
no flags
Details
Formatted Diff
Diff
Patch
(2.98 KB, patch)
2012-04-16 05:18 PDT
,
noel gordon
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
noel gordon
Comment 1
2012-04-16 05:06:57 PDT
Created
attachment 137321
[details]
Patch
noel gordon
Comment 2
2012-04-16 05:18:15 PDT
Reopening to attach new patch.
noel gordon
Comment 3
2012-04-16 05:18:20 PDT
Created
attachment 137327
[details]
Patch
Eric Seidel (no email)
Comment 4
2012-04-16 14:07:58 PDT
Comment on
attachment 137327
[details]
Patch So does this mean we now pass more of that test? I'm surprised not to see any expectation changes?
noel gordon
Comment 5
2012-04-18 00:55:06 PDT
No change in behavior test-wise: we still pass canvas/philip/tests/toDataURL.jpeg.alpha.html, which covers this area of the code.
WebKit Review Bot
Comment 6
2012-04-18 01:06:02 PDT
Comment on
attachment 137327
[details]
Patch Clearing flags on attachment: 137327 Committed
r114491
: <
http://trac.webkit.org/changeset/114491
>
WebKit Review Bot
Comment 7
2012-04-18 01:06:07 PDT
All reviewed patches have been landed. Closing bug.
noel gordon
Comment 8
2012-04-18 22:13:55 PDT
Oh and did we noticed that loop stuffing 255 into the alpha channel. The encoder is so fast that iterating over pixels to reformat them becomes a significant factor in overall encoding time. Surely the CG jpeg encoder can be told to ignore the alpha channel. Investigating ...
noel gordon
Comment 9
2012-04-18 23:22:08 PDT
Filed
bug 84319
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug