[CG] ImageBuffer: check getPremultipliedImageData() error return https://bugs.webkit.org/show_bug.cgi?id=84022

Reviewed by Eric Seidel.

ImageBuffer::getPremultipliedImageData() can fail. toDataURL() should check for a
failure return, and return "data:," if so.

No new tests. Covered by existing toDataURL tests, in particular:
  canvas/philip/tests/toDataURL.jpeg.alpha.html

* platform/graphics/cg/ImageBufferCG.cpp:
(WebCore::ImageBuffer::toDataURL): Rename |arr| variable to premultipliedData and
return "data:," if premultipliedData is empty. Clean up whitespace and a comment.


Canonical link: https://commits.webkit.org/101739@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114491 268f45cc-cd09-0410-ab3c-d52691b4dbfc